Fix alignment of hidden comments

--- a/res/style.scss
+++ b/res/style.scss
@@ -272,7 +272,7 @@
 
         &.hidden {
             padding-top: 0;
-            padding-bottom: 0;
+            padding-bottom: 10px;
 
             & .at_author {
                 color: gray;
